--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -12,19 +12,35 @@
     --gray-7: #F8F9FA; 
     --gray-8:  #FDFEFF; 
     --font: "Inter", sans-serif;
-    --font-size-very-large: 40px;
-    --font-size-large: 1.4em;
-    --font-size-normal: 1.2em;
-    --font-size-small: 1em;
-    --font-size-very-small: 0.8em;
+    --font-size-large: 40px;
+    --font-size-normal: 24px;
+    --font-size-small: 16px;
     
 }
+
+.darkmode:root {
+    --brand-1: #6F00FF;    
+    --brand-2: #8629FF; 
+    --gray-8: #15171A; 
+    --gray-7: #212529; 
+    --gray-6: #2B2F33; 
+    --gray-5: #CED4DA; 
+    --gray-4: #DEE2E6; 
+    --gray-3: #F1F3F5; 
+    --gray-2: #F8F9FA; 
+    --gray-1:  #FDFEFF; 
+    --font: "Inter", sans-serif;
+    --font-size-large: 40px;
+    --font-size-normal: 24px;
+    --font-size-small: 16px;
+}
+
 
 body {
     box-sizing: border-box;
     font-family: var(--font);
-    font-size:var(); 
     background-color: var(--gray-8);
+    font-weight: 500;
 }
 
 
@@ -34,7 +50,15 @@ body {
 }
 
 .primary-title {
-    font-size: var(--font-size-very-large);
+    font-size: var(--font-size-large);
+    font-weight: 600;
+    color: var(--gray-2);
+}
+
+.secondary-title {
+    font-size: var(--font-size-normal);
+    font-weight: 600;
+    color: var(--gray-2);
 }
 
 .highlight {
