--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,10 @@
 header {
+    position: sticky;
+    top: 0;
     display: flex;
     flex-direction: column;
     height: 10vh;
+    background-color: var(--gray-8);
     
 }
 
@@ -20,10 +23,11 @@ header::after {
     width: 100%;
 }
 
-.dark-mode{
+.header__theme-button{
     width: 44px;
     height: 36px;
-    padding: 9px, 14px, 9px, 14px;
+    padding: 9px 14px;
     border:none; 
     border-radius: 5px;
+    background-color: var(--gray-6);
 }
